<resources>
    <string name="app_name">온동네나눔</string>

    <string name="next">다음</string>
    <string name="skip">건너뛰기</string>
    <string name="start">시작하기</string>


    <string name="tutorlal_01">서울시 물품공유 서비스</string>
    <string name="tutorlal_01_1">온동네 나눔</string>
    <string name="tutorlal_01_2"> 쉽고 편리하게 마을간 물품을 확인하고 \n대여 할 수 있습니다. </string>

    <string name="tutorlal_02">실시간으로 대여 가능한   </string>
    <string name="tutorlal_02_1">물품을 확인하고  </string>
    <string name="tutorlal_02_1_2">대여를 신청</string>
    <string name="tutorlal_02_2">물품과 관련된 문의사항도 물품 담당자에게 \n Talk을 통해 실시간으로 문의할 수 있어요.</string>


    <string name="tutorlal_03">대여 신청 후 승인이 완료되면 </string>
    <string name="tutorlal_03_1">마을에 방문하여 물품 수령 </string>
    <string name="tutorlal_03_2">대여기간 내 물품을 사용하고 \n 늦지 않게 반납하면 끝  </string>
    <string name="title_activity_test">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="phone_auth_authNumber_request">인증번호 재전송</string>

    <string name="termsOfUseTitleDescribe">물품공유서비스 이용약관 노출됩니다.물품공유서비스 이용약관 노출됩니다.\n물품공유서비스 이용약관 노출됩니다.물품공유서비스 이용약관 노출됩니다.\n물품공유서비스 이용약관 노출됩니다.물품공유서비스 이용약관 노출됩니다.\n물품공유서비스 이용약관 노출됩니다.\n</string>
    <string name="privacyStatementDescribe">개인정보 취급방침에 노출됩니다.개인정보 취급방침에 노출됩니다.\n개인정보 취급방침에 노출됩니다.개인정보 취급방침에 노출됩니다.\n개인정보 취급방침에 노출됩니다.개인정보 취급방침에 노출됩니다.\n개인정보 취급방침에 노출됩니다.\n</string>
    <string name="marketingDescribe">마케팅 수신동의에 노출됩니다.마케팅 수신동의에 노출됩니다.\n마케팅 수신동의에 노출됩니다.마케팅 수신동의에 노출됩니다.\n마케팅 수신동의에 노출됩니다.마케팅 수신동의에 노출됩니다.\n마케팅 수신동의에 노출됩니다.\n</string>

    <string name="termsOfUseTitle">물품공유 서비스 이용약관</string>
    <string name="privacyStatementTitle">개인정보 취급방침</string>
    <string name="marketingTitle">마케팅 수신동의</string>

</resources>