<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"

        >


        <TextView
            android:text="@string/tutorlal_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:text="@string/tutorlal_02_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/intro2_"
          />

        <TextView
            android:text="@string/tutorlal_02_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@android:color/black"
            android:textSize="@dimen/slide_titel"
         />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"

            android:textAlignment="center"
            android:textColor="@android:color/black"

            />






    </LinearLayout>




</RelativeLayout>